<resources>
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh_label">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string name="pref_location_key">location</string>
    <string name="pref_title_location">Location</string>
    <string name="pref_default_location">110085</string>

    <string name="pref_temperature_title">Temperature Units</string>
    <string name="pref_temperature_key">temperature</string>
    <string name="pref_temperature_default">0</string>
    <string-array name="pref_temperature_entries">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_temperature_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="action_show_map">Show on Map</string>
    <string name="action_share">Share</string>
</resources>
