<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_location"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_location" />

    <ListPreference
        android:title="@string/pref_temperature_title"
        android:key="@string/pref_temperature_key"
        android:defaultValue="@string/pref_temperature_default"
        android:entries="@array/pref_temperature_entries"
        android:entryValues="@array/pref_temperature_values" />

</PreferenceScreen>
